-bug#0001359: Better error checking in rrd.php
-bug#0001404: timeout in "function ping_icmp" (lib/ping.php)
-bug#0001405: Spaces in DS when .rrd file is created, so it fails
-bug#0001407: Place graph thumbnail into div to lower page length changes on load graphs
-bug#0001411: Graph Search Trouble with Cacti 8.7d 
-bug#0001413: strip_quotes fails 
-bug#0001426: multiple form opening due to bug in draw_edit_form() 
-bug: remove graph permissions if graph is removed
-bug: remove host permissions if host is removed
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: when adding a tree node via the api numeric and natural were reversed
-documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
-documentation: Documentation of specific rrdtool feature
-documentation: Use of SNMP exec option up to net-snmp 5.3
-feature#0000967: Option to force users to use SSL
-feature#0000954: implement --alt-y-grid graph option
-feature#0001030: Lower limit and upper limit |query_*| variable support for Graph Templates
-feature#0001111: add remove-device.php cli script, replace numerical constants for permission handling by PERM_*
-feature#0001122: Propagate Host Template changes to related hosts
-feature#0001123: Performance tweak by adding some indices
-feature#0001124: Devices/Host Templates - remove already associated objects from dropdown selector
-feature#0001179: Visual Fix for CACTI Graphs View Interface(list,preview)
-feature#0001185: Mass enable/disable graph export per graph from Graph Management
-feature#0001332: non SNMP Hosts' Reindex Method should not default to "Uptime goes backwards"
-feature#0001350: Compare Cacti Data Source Info to current RRD File Info
-feature#0001406: Dynamically display field description for templates
-feature#0001408: Hide templated input fields
-feature#0001409: Add context sensitive page help linking to cacti dokuwiki