@@ -61,6 +61,32 @@ define("DATA_SOURCE_TYPE_DERIVE",	3);
 define("DATA_SOURCE_TYPE_ABSOLUTE",	4);
 define("DATA_SOURCE_TYPE_COMPUTE",	5);
 
+define("GRAPH_ACTION_DELETE", 					0);
+define("GRAPH_ACTION_CHANGE_TEMPLATE", 			1);
+define("GRAPH_ACTION_DUPLICATE", 				2);
+define("GRAPH_ACTION_CONVERT_TO_TEMPLATE", 		3);
+define("GRAPH_ACTION_CHANGE_HOST", 				4);
+define("GRAPH_ACTION_REAPPLY_SUGGESTED_NAMES", 	5);
+define("GRAPH_ACTION_RESIZE", 					6);
+define("GRAPH_ACTION_ENABLE_EXPORT", 			7);
+define("GRAPH_ACTION_DISABLE_EXPORT", 			8);
+
+define("DEVICE_ACTION_DELETE", 						0);
+define("DEVICE_ACTION_ENABLE", 						1);
+define("DEVICE_ACTION_DISABLE", 					2);
+define("DEVICE_ACTION_CHANGE_SNMP_OPTIONS", 		3);
+define("DEVICE_ACTION_CLEAR_STATISTICS", 			4);
+define("DEVICE_ACTION_CHANGE_AVAILABILITY_OPTIONS", 5);
+
+define("DS_ACTION_DELETE", 					0);
+define("DS_ACTION_CHANGE_TEMPLATE", 		1);
+define("DS_ACTION_CHANGE_HOST", 			2);
+define("DS_ACTION_DUPLICATE", 				3);
+define("DS_ACTION_CONVERT_TO_TEMPLATE", 	4);
+define("DS_ACTION_ENABLE", 					5);
+define("DS_ACTION_DISABLE", 				6);
+define("DS_ACTION_REAPPLY_SUGGESTED_NAMES", 7);
+
 define("GRAPH_ITEM_TYPE_COMMENT", 1);
 define("GRAPH_ITEM_TYPE_HRULE",   2);
 define("GRAPH_ITEM_TYPE_VRULE",   3);
