@@ -180,7 +180,7 @@ function form_actions() {
 	if (isset($_POST["selected_items"])) {
 		$selected_items = unserialize(stripslashes($_POST["selected_items"]));
 
-		if ($_POST["drp_action"] == "1") { /* delete */
+		if ($_POST["drp_action"] == GRAPH_ACTION_DELETE) { /* delete */
 			for ($i=0;($i<count($selected_items));$i++) {
 				/* ================= input validation ================= */
 				input_validate_input_number($selected_items[$i]);
@@ -213,7 +213,7 @@ function form_actions() {
 
 				api_graph_remove($selected_items[$i]);
 			}
-		}elseif ($_POST["drp_action"] == "2") { /* change graph template */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_CHANGE_TEMPLATE) { /* change graph template */
 			for ($i=0;($i<count($selected_items));$i++) {
 				/* ================= input validation ================= */
 				input_validate_input_number($selected_items[$i]);
@@ -222,7 +222,7 @@ function form_actions() {
 
 				change_graph_template($selected_items[$i], $_POST["graph_template_id"], true);
 			}
-		}elseif ($_POST["drp_action"] == "3") { /* duplicate */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_DUPLICATE) { /* duplicate */
 			for ($i=0;($i<count($selected_items));$i++) {
 				/* ================= input validation ================= */
 				input_validate_input_number($selected_items[$i]);
@@ -230,7 +230,7 @@ function form_actions() {
 
 				duplicate_graph($selected_items[$i], 0, $_POST["title_format"]);
 			}
-		}elseif ($_POST["drp_action"] == "4") { /* graph -> graph template */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_CONVERT_TO_TEMPLATE) { /* graph -> graph template */
 			for ($i=0;($i<count($selected_items));$i++) {
 				/* ================= input validation ================= */
 				input_validate_input_number($selected_items[$i]);
@@ -248,7 +248,7 @@ function form_actions() {
 
 				api_tree_item_save(0, $_POST["tree_id"], TREE_ITEM_TYPE_GRAPH, $_POST["tree_item_id"], "", $selected_items[$i], read_graph_config_option("default_rra_id"), 0, 0, 0, false);
 			}
-		}elseif ($_POST["drp_action"] == "5") { /* change host */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_CHANGE_HOST) { /* change host */
 			for ($i=0;($i<count($selected_items));$i++) {
 				/* ================= input validation ================= */
 				input_validate_input_number($selected_items[$i]);
@@ -258,7 +258,7 @@ function form_actions() {
 				db_execute("update graph_local set host_id=" . $_POST["host_id"] . " where id=" . $selected_items[$i]);
 				update_graph_title_cache($selected_items[$i]);
 			}
-		}elseif ($_POST["drp_action"] == "6") { /* reapply suggested naming */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_REAPPLY_SUGGESTED_NAMES) { /* reapply suggested naming */
 			for ($i=0;($i<count($selected_items));$i++) {
 				/* ================= input validation ================= */
 				input_validate_input_number($selected_items[$i]);
@@ -267,7 +267,7 @@ function form_actions() {
 				api_reapply_suggested_graph_title($selected_items[$i]);
 				update_graph_title_cache($selected_items[$i]);
 			}
-		}elseif ($_POST["drp_action"] == "7") { /* resize graphs */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_RESIZE) { /* resize graphs */
 			for ($i=0;($i<count($selected_items));$i++) {
 				/* ================= input validation ================= */
 				input_validate_input_number($selected_items[$i]);
@@ -275,14 +275,14 @@ function form_actions() {
 
 				api_resize_graphs($selected_items[$i], $_POST['graph_width'], $_POST['graph_height']);
 			}
-		}elseif ($_POST["drp_action"] == "8") { /* enable graph export */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_ENABLE_EXPORT) { /* enable graph export */
 			for ($i=0;($i<count($selected_items));$i++) {
 				/* ================= input validation ================= */
 				input_validate_input_number($selected_items[$i]);
 				/* ==================================================== */
 				db_execute("UPDATE graph_templates_graph SET export='on' WHERE local_graph_id=" . $selected_items[$i]);
 			}
-		}elseif ($_POST["drp_action"] == "9") { /* disable graph export */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_DISABLE_EXPORT) { /* disable graph export */
 			for ($i=0;($i<count($selected_items));$i++) {
 				/* ================= input validation ================= */
 				input_validate_input_number($selected_items[$i]);
@@ -324,7 +324,7 @@ function form_actions() {
 	print "<form action='graphs.php' method='post'>\n";
 
 	if (sizeof($graph_array)) {
-		if ($_POST["drp_action"] == "1") { /* delete */
+		if ($_POST["drp_action"] == GRAPH_ACTION_DELETE) { /* delete */
 			$graphs = array();
 
 			/* find out which (if any) data sources are being used by this graph, so we can tell the user */
@@ -362,7 +362,7 @@ function form_actions() {
 					</td>
 				</tr>\n
 				";
-		}elseif ($_POST["drp_action"] == "2") { /* change graph template */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_CHANGE_TEMPLATE) { /* change graph template */
 			print "	<tr>
 					<td class='textArea'>
 						<p>Choose a graph template and click save to change the graph template for
@@ -373,7 +373,7 @@ function form_actions() {
 					</td>
 				</tr>\n
 				";
-		}elseif ($_POST["drp_action"] == "3") { /* duplicate */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_DUPLICATE) { /* duplicate */
 			print "	<tr>
 					<td class='textArea'>
 						<p>When you click save, the following graphs will be duplicated. You can
@@ -383,7 +383,7 @@ function form_actions() {
 					</td>
 				</tr>\n
 				";
-		}elseif ($_POST["drp_action"] == "4") { /* graph -> graph template */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_CONVERT_TO_TEMPLATE) { /* graph -> graph template */
 			print "	<tr>
 					<td class='textArea'>
 						<p>When you click save, the following graphs will be converted into graph templates.
@@ -404,7 +404,7 @@ function form_actions() {
 				</tr>\n
 				<input type='hidden' name='tree_id' value='" . $matches[1] . "'>\n
 				";
-		}elseif ($_POST["drp_action"] == "5") { /* change host */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_CHANGE_HOST) { /* change host */
 			print "	<tr>
 					<td class='textArea'>
 						<p>Choose a new host for these graphs:</p>
@@ -413,16 +413,16 @@ function form_actions() {
 					</td>
 				</tr>\n
 				";
-		}elseif ($_POST["drp_action"] == "6") { /* reapply suggested naming to host */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_REAPPLY_SUGGESTED_NAMES) { /* reapply suggested naming to host */
 			print "	<tr>
 					<td class='textArea'>
-						<p>When you click save, the following graphs will have thier suggested naming convensions
-						recalculated and applies to the graphs.</p>
+						<p>When you click save, the following graphs will have their suggested naming conventions
+						recalculated and applied to the graphs.</p>
 						<p>$graph_list</p>
 					</td>
 				</tr>\n
 				";
-		}elseif ($_POST["drp_action"] == "7") { /* reapply suggested naming to host */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_RESIZE) { /* reapply suggested naming to host */
 			print "	<tr>
 					<td class='textArea'>
 						<p>When you click save, the following graphs will be resized per your specifications.</p>
@@ -432,7 +432,7 @@ function form_actions() {
 					</td>
 				</tr>\n
 				";
-		}elseif ($_POST["drp_action"] == "8") { /* enable graph export */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_ENABLE_EXPORT) { /* enable graph export */
 			print "	<tr>
 					<td class='textArea'>
 						<p>When you click save, the following graphs will be enabled for graph export.</p>
@@ -440,7 +440,7 @@ function form_actions() {
 					</td>
 				</tr>\n
 				";
-		}elseif ($_POST["drp_action"] == "9") { /* disable graph export */
+		}elseif ($_POST["drp_action"] == GRAPH_ACTION_DISABLE_EXPORT) { /* disable graph export */
 			print "	<tr>
 					<td class='textArea'>
 						<p>When you click save, the following graphs will be disabled for graph export.</p>
